Added Card Component

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,34 @@
-.App {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+h1 {
+  font-size: 36px;
+  line-height: 40px;
+  color: #343434;
+  font-weight: normal;
   font-family: sans-serif;
+  text-transform: uppercase;
   text-align: center;
+  margin-bottom: 2px;
+  text-shadow: 0 2px white, 0 3px #777;
+}
+h2 {
+  font-weight: normal;
+  position: relative;
+  text-shadow: 0 -1px rgba(0, 0, 0, 0.6);
+  font-size: 28px;
+  line-height: 40px;
+  background: #355681;
+  background: rgba(53, 86, 129, 0.8);
+  border: 1px solid #fff;
+  padding: 5px 15px;
+  color: white;
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
+  border-radius: 0 10px 0 10px;
+  box-shadow: inset 0 0 5px rgba(53, 86, 129, 0.5);
+  font-family: "Muli", sans-serif;
 }
